--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "helmet": "^3.18.0",
+    "jest": "^24.8.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.6",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "supertest": "^4.0.2"
   }
 }
